
2015-06-12 Steven E. Pav <shabbychef@gmail.com>
* 0.2.1 on CRAN
* shiny app

2015-04-01 Steven E. Pav <shabbychef@gmail.com>
* 0.2.0 on CRAN
* doubly non-central Beta and Eta
* sum of log chi-squares
* product of chi-squares

2015-03-07 Steven E. Pav <shabbychef@gmail.com>
* 0.1.0 on CRAN

2015-02-13 Steven E. Pav <shabbychef@gmail.com>
* start work
