@@ -2,7 +2,7 @@ Package: sadists
 Maintainer: Steven E. Pav <shabbychef@gmail.com>
 Authors@R: c(person(c("Steven", "E."), "Pav", role=c("aut","cre"),
     email="shabbychef@gmail.com"))
-Version: 0.2.1.9000
+Version: 0.2.1.9500
 Date: 2015-08-25
 License: LGPL-3
 Title: Some Additional Distributions
